[package]
name = "demo_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.2"
cosmwasm-storage = "1.2"
cw-storage-plus = "1.0"
cosmwasm-vm = "1.2"
cosmwasm-schema = "1.1.3"
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0" }

[dev-dependencies]
cw-multi-test = "0.16.2"